improved forum question contrast, readme fixed logo image

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -63,6 +63,10 @@ body {
     margin:auto;
 }
 
+.mainpost{
+    background-color: rgb(45,45,45) !important;
+}
+
 .subpost {
     color:rgb(245,246,246);
     background-color:rgb(66,61,70);
